# fakeit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: address.rs  address_data.rs  animal.rs  beer.rs  bool_rand.rs  color.rs  company.rs  contact.rs  currency.rs  datetime.rs  file.rs  generator.rs  hacker.rs  helpers.rs  hipster.rs  image.rs  internet.rs  job.rs  language.rs  lib.rs  log_level.rs  misc.rs  name.rs  password.rs  payment.rs  person.rs  status_code.rs  string.rs  unique.rs  user_agent.rs  vehicle.rs  words.rs
src/benches/: fakeit.rs
src/data/: address.rs  animal.rs  beer.rs  color.rs  company.rs  computer.rs  contact.rs  currency.rs  datetime.rs  files.rs  hacker.rs  hipster.rs  internet.rs  job.rs  language.rs  log_level.rs  lorem.rs  mod.rs  payment.rs  person.rs  status_code.rs  string.rs  vehicle.rs
src/rand/: mod.rs
src/testify/: mod.rs
