[package]
name = "fakeit"
version = "1.1.2"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
description = "Fake data generator library with 130+ functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/fakeit"
keywords = ["fake", "data", "random", "generator", "faker"]

[[benches]]
name = "fakeit"
harness = false

[dependencies]
rand = "0.6.5"
libmath = "0.2.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "0.8", features = ["v1", "v4"] }
simplerand = "1.2.0"
