[package]
name = "fakeit"
version = "1.3.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
description = "Fake data generator library with 130+ functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/fakeit"
keywords = ["fake", "data", "random", "generator", "faker"]

[[benches]]
name = "fakeit"
harness = false

[dependencies]
libmath = "0.2.1"
uuid = { version = "0.8", features = ["v1", "v4"] }
simplerand = { git = "https://github.com/PumpkinSeed/simplerand", branch = "small-fixes" }
lazy_static = "1.5.0"
