[package]
name = "fakeit"
version = "1.4.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
description = "Fake data generator library with 130+ functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/fakeit"
keywords = ["fake", "data", "random", "generator", "faker"]

[dependencies]
rand = "0.9.2"
uuid = { version = "0.8", features = ["v1", "v4"] }
simplerand = "1.2.0"
